@@ -512,6 +512,11 @@ HTTP server \\
 \texttt{DOCUMENT\_ROOT}, \texttt{JAILCGI} & optional flags for CGI
 widgets \\
 
+\texttt{APPEND} & appends an argument to the command line of the
+preceding \texttt{PIPE} \\
+
+\hline
+
 \hline
 \texttt{PROCESS} & enable the BENG processor \\
 \hline
