@@ -45,6 +45,7 @@ TRANSLATE_DELEGATE = 41
 TRANSLATE_INVALIDATE = 42
 TRANSLATE_LOCAL_ADDRESS = 43
 TRANSLATE_LOCAL_ADDRESS_STRING = 44
+TRANSLATE_APPEND = 45
 
 def _parse_port(address):
     if address[0] == '[':
